# fastapi-playground

./: .dockerignore  .editorconfig  .env.example  .firebaserc  .gitignore  AGENTS.md  Dockerfile  GCP.md  Justfile  README.md  cloudbuild.yaml  firebase.json  pyproject.toml
.agents/skills/fastapi-endpoint/: SKILL.md
.agents/skills/fastapi-endpoint/agents/: openai.yaml
.agents/skills/firestore-service/: SKILL.md
.agents/skills/firestore-service/agents/: openai.yaml
.agents/skills/openapi-contract/: SKILL.md
.agents/skills/openapi-contract/agents/: openai.yaml
.agents/skills/pytest-testing/: SKILL.md
.agents/skills/pytest-testing/agents/: openai.yaml
.agents/skills/readme-maintenance/: SKILL.md
.codex/: config.toml
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: readme-review.agent.md  security-review.agent.md
.github/instructions/: openapi.instructions.md  tests.instructions.md
.github/prompts/: readme-review.prompt.md  security-review.prompt.md
.github/skills/domain-exception/: SKILL.md
.github/skills/exceptions/: SKILL.md
.github/skills/fastapi-endpoint/: SKILL.md
.github/skills/firestore-service/: SKILL.md
.github/skills/pydantic-model/: SKILL.md
.github/skills/pytest-testing/: SKILL.md
.github/workflows/: app-ci.yml  app-lint.yml  check-all.yml  ci.yml  dependabot-auto-merge.yml  labeler-manual.yml  labeler.yml
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  health.py  hello.py  items.py  profile.py  schemas.py
app/auth/: __init__.py  firebase.py
app/core/: body_limit.py  cbor.py  config.py  constants.py  content_negotiation.py  exception_handler.py  firebase.py  logging.py  openapi.py  schema_links.py  security.py  validation.py
app/core/handlers/: __init__.py  domain.py  http.py  registration.py  validation.py
app/exceptions/: __init__.py  base.py  profile.py  schema.py
app/middleware/: __init__.py  body_limit.py  logging.py  security.py
app/models/: __init__.py  dog.py  error.py  health.py  profile.py  types.py
app/models/health/: __init__.py  responses.py
app/models/hello/: __init__.py  requests.py  responses.py
app/models/items/: __init__.py  data.py  responses.py
app/models/profile/: __init__.py  requests.py  responses.py
app/pagination/: __init__.py  cursor.py  link.py  paginator.py  params.py
app/routers/: dog.py  health.py  hello.py  items.py  profile.py
app/services/: __init__.py  dog.py  profile.py
app/services/profile/: __init__.py  service.py
functions/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
functions/tests/: conftest.py  test_main.py
tests/: AGENTS.md  __init__.py  conftest.py  test_auth.py  test_e2e.py  test_logging.py  test_models.py  test_security.py
tests/e2e/: __init__.py  conftest.py  test_profile_happy_paths.py
tests/e2e/api/: test_profile.py
tests/e2e/routers/: test_profile.py
tests/helpers/: __init__.py  assertions.py  auth.py  clients.py  profiles.py  starlette_utils.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_error_schema.py  test_logging_middleware.py  test_observability.py  test_openapi.py  test_profile_router_errors.py  test_profile_validation.py  test_request_id.py  test_security.py
tests/integration/api/: test_cbor.py  test_health.py  test_hello.py  test_items.py  test_profile.py  test_schemas.py
tests/integration/routers/: test_cbor.py  test_health.py  test_hello.py  test_items.py  test_profile.py  test_root.py
tests/mocks/: __init__.py  firebase.py  firestore.py  http.py  services.py
tests/unit/: __init__.py  conftest.py  test_dependencies.py  test_main.py
tests/unit/auth/: __init__.py  test_firebase.py
tests/unit/core/: test_body_limit_middleware.py  test_cbor.py  test_config.py  test_exception_handler.py  test_firebase.py  test_firebase_init.py  test_logging.py  test_logging_formatter.py  test_logging_module.py  test_security_headers_middleware.py  test_validation.py
tests/unit/core/handlers/: test_domain.py  test_http.py  test_validation.py
tests/unit/exceptions/: __init__.py  test_base.py  test_profile.py
tests/unit/middleware/: __init__.py  test_body_limit.py  test_logging.py  test_security.py
tests/unit/mocks/: __init__.py  test_http.py
tests/unit/models/: __init__.py  test_error.py  test_health.py  test_profile_model.py  test_profile_models.py  test_types.py
tests/unit/pagination/: __init__.py  test_cursor.py  test_link.py  test_paginator.py  test_params.py
tests/unit/services/: test_profile.py  test_profile_service.py
