[project]
name = "fastapi-playground"
version = "0.1.0"
description = "FastAPI playground for just, uv, ty and Ruff"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "firebase-admin>=7.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.10",
    "ty>=0.0.4",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# Add type annotation and FastAPI rules, isort import sorting rules, plus pyupgrade to modernize typing
extend-select = ["ANN", "FAST", "I", "UP"]

[tool.ty.environment]
# Multiple directories (priority order)
root = ["./app", "./tests"]

[tool.ty.rules]
unresolved-attribute = "ignore"
unresolved-import = "ignore"

[tool.pytest.ini_options]
# addopts = "--maxfail=1 --cov=app"
norecursedirs = [
    "lib",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["app", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
