[project]
name = "fastapi-playground"
version = "0.1.0"
description = "FastAPI playground for just, uv, ty and Ruff"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "fastapi-request-observability>=0.2.0",
    "firebase-admin>=7.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.49.0",
    "fastapi-problem>=0.12.1",
    "cbor2>=5.7.1",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx2>=1.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.uv]
required-version = ">=0.11.28"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
preview = false
explicit-preview-rules = true
extend-select = [
    "D213",  # Repository convention: summary starts after the opening quotes
]

ignore = [
    # Framework and ecosystem rules that do not apply to this repository.
    "AIR",  # Airflow
    "CPY",  # Copyright header policy
    "DJ",   # Django
    "FA",   # Future annotations are unnecessary on Python 3.14+
    "INT",  # gettext
    "NPY",  # NumPy
    "PD",   # pandas

    # Rules documented as incompatible with Ruff Formatter.
    "COM812",
    "COM819",
    "D203",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "Q",
    "W191",

    # Repository docstrings are useful but not mandatory for every public symbol.
    "D1",
    "D200",  # Keep the required multi-line docstring form
    "D212",  # Prefer D213

    # These exception rules add indirection without improving this API's errors.
    "EM",
    "TRY003",
    "TRY300",
    "TRY301",

    # Runtime annotation imports are intentional for FastAPI and Pydantic.
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Fixtures and mocks intentionally mirror callback signatures
    "D",        # Production contracts, not test helpers, require docstring linting
    "FBT",      # Test factories favor concise boolean controls
    "PLC0415",  # Tests use local imports to exercise import-time behavior
    "S101",     # Allow assert in tests
    "S107",     # Allow hardcoded test tokens
    "SLF001",   # Unit tests verify private state where it is the behavior boundary
    "PLR2004",  # Magic values OK in tests
    "PT013",    # Allow `from pytest import ...` style
    "RET504",   # Unnecessary assignment OK in tests for clarity
    "S104",     # Testing 0.0.0.0 binding is intentional
]
"functions/tests/**/*.py" = [
    "ARG",
    "D",
    "FBT",
    "INP001",   # Firebase Functions uses a deployable module, not a package
    "PLC0415",
    "PLR2004",
    "S101",     # Allow assert in tests
    "SLF001",
]
"functions/main.py" = [
    "INP001",   # Firebase deploys this module directly
]
"app/core/exception_handler.py" = [
    "ARG001",   # Handler interfaces require context arguments that some handlers do not use
]
"app/core/validation.py" = [
    "ARG001",   # fastapi-problem handler callback signature
]
"app/main.py" = [
    "ARG001",   # ASGI lifespan callback signature
]
"app/core/config.py" = [
    "S104",     # Binding to 0.0.0.0 is intentional for containers
]
"app/core/firebase.py" = [
    "PLW0603",  # Explicit process-wide Firebase lifecycle state
]
"app/core/logging.py" = [
    "PLW0603",  # Idempotent process-wide logging initialization
]
"app/models/profile/requests.py" = [
    "FBT001",   # Pydantic field-validator callback receives the boolean positionally
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.field_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 11

[tool.ty.src]
include = ["app", "tests"]

[tool.ty.analysis]
strict-literal-narrowing = true

[tool.ty.environment]
python-platform = "linux"

[tool.ty.rules]
all = "error"
# ty documents these rules as false-positive-prone or non-runtime diagnostics.
division-by-zero = "ignore"
possibly-missing-attribute = "ignore"
possibly-missing-import = "ignore"
possibly-unresolved-reference = "ignore"
unsupported-dynamic-base = "ignore"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = "--maxfail=1 --cov=app"

[tool.coverage.run]
branch = true
parallel = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
