[project]
name = "fastapi-playground-functions"
version = "0.1.0"
description = "Firebase Cloud Functions for fastapi-playground"
requires-python = ">=3.14"
dependencies = [
    "firebase-admin>=7.4.0",
    "firebase-functions>=0.6.0",
    "genkit>=0.7.0",
    "genkit-plugin-google-cloud>=0.7.0",
    "genkit-plugin-google-genai>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
required-version = ">=0.11.28"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # Remove these exact filters when the upstream packages stop emitting them.
    'ignore:^Field name "schema" in "Prompt(Input|Output)Config" shadows an attribute in parent "BaseModel"$:UserWarning:dotpromptz\.typing',
    "ignore:^'_UnionGenericAlias' is deprecated and slated for removal in Python 3\\.17$:DeprecationWarning:google\\.genai\\.types",
]
