[project]
name = "fastapi-playground-functions"
version = "0.1.0"
description = "Firebase Cloud Functions for fastapi-playground"
requires-python = ">=3.14"
dependencies = [
    "firebase-admin>=7.4.0",
    "firebase-functions>=0.6.0",
    "genkit>=0.8.0",
    "genkit-google-genai>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
required-version = ">=0.11.28"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # Remove these module-scoped filters when the upstream packages stop emitting warnings.
    'ignore::UserWarning:dotpromptz\.typing',
    'ignore::DeprecationWarning:google\.genai\.types',
]
